# ioc-extractor

./: README.md  ioc-extractor-cli.py  pyproject.toml  requirements.txt  setup.py
example-files/: StopRansomware_ MedusaLocker _ CISA.html  free-beer.csv
parsers/: fileparse.py
